k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapi-service
  namespace: todoapi-dev
  labels:
    app: todoapi
spec:
  type: ClusterIP                    # Using LoadBalancer if in cloud (AWS/GCP/Azure)
  selector:
    app: todoapi
  ports:
  - name: http
    protocol: TCP
    port: 80                         # Port expose to out service
    targetPort: 8080                 # Port inside container
